# bugtracker

./: db.sqlite3  pyproject.toml
bug_app/: admin.py  forms.py  models.py  views.py
bug_app/migrations/: 0001_initial.py
bugtracker/: settings.py  urls.py
templates/: form.html  index.html  ticket_detail.html  user_detail.html
