[tool.poetry]
name = "bugs"
version = "0.1.0"
description = "Bug Tracker"
authors = ["Leanne Benson <stylistleannerowe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
